--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <!-- partial:index.partial.html -->
     <div class="header-inner section-inner my-5">
-      <h1 class="welcome">My Personal LinkTree</h1>
+      <h1 class="welcome">My LinkTree</h1>
       <h1 class="site-title">
         <img src="https://res.cloudinary.com/dvlmnhdlf/image/upload/v1668278194/Foto/my-photo.png" class="rounded-circle mx-auto d-block mb-3" />
         M. Rayhan R.
