mengganti foto dan url portofolio

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <div class="header-inner section-inner my-5">
       <h1 class="welcome">My LinkTree</h1>
       <h1 class="site-title">
-        <img src="https://res.cloudinary.com/dvlmnhdlf/image/upload/v1668445249/Foto/imageedit_1_3203325789_ayu2fr.png" class="rounded-circle mx-auto d-block mb-3" />
+        <img src="https://res.cloudinary.com/dvlmnhdlf/image/upload/v1669296662/Foto/animet-removebg-preview_fqfrmo.png" class="rounded-circle mx-auto d-block mb-3" />
         M. Rayhan R.
       </h1>
       <p class="site-description">Front-End Web Developer</p>
     </div>
     <div class="container">
       <div class="row mb-4">
-        <a class="btn btn-dark col-12 py-3" href="https://mrayhanr.netlify.app/" target="_blank" role="button"> <i class="fas fa-globe-asia"></i> Portofolio </a>
+        <a class="btn btn-dark col-12 py-3" href="https://mrayhanr.my.id/" target="_blank" role="button"> <i class="fas fa-globe-asia"></i> Portofolio </a>
       </div>
       <div class="row mb-4">
         <a class="btn btn-dark col-12 py-3" href="https://www.youtube.com/channel/UCsywiAknKzdXlAZCjWgY2Dg/videos" target="_blank" role="button"> <i class="fab fa-youtube"></i> Youtube </a>
