mengubah link portofolio dan resume

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     </div>
     <div class="container">
       <div class="row mb-4">
-        <a class="btn btn-dark col-12 py-3" href="https://mrayhanr.my.id/" target="_blank" role="button"> <i class="fas fa-globe-asia"></i> Portofolio </a>
+        <a class="btn btn-dark col-12 py-3" href="https://www.rayhans.my.id/" target="_blank" role="button"> <i class="fas fa-globe-asia"></i> Portofolio </a>
       </div>
       <div class="row mb-4">
         <a class="btn btn-dark col-12 py-3" href="https://www.youtube.com/channel/UCsywiAknKzdXlAZCjWgY2Dg/videos" target="_blank" role="button"> <i class="fab fa-youtube"></i> Youtube </a>
       </div>
       <div class="row mb-4">
-        <a class="btn btn-dark col-12 py-3" href="https://drive.google.com/file/d/1CV2xWbZ1Olh3OI6ld5LVPiAvvstHTaMT/view?usp=share_link" target="_blank" role="button"> <i class="far fa-file"></i> Resume </a>
+        <a class="btn btn-dark col-12 py-3" href="https://drive.google.com/file/d/1gvlCVfBGFqA7RcUEgZSqfjcs3MvtLl8Q/view?usp=sharing" target="_blank" role="button"> <i class="far fa-file"></i> Resume </a>
       </div>
       <div class="row mb-4">
         <a class="btn btn-dark col-12 py-3" href="https://wa.me/6285155223165" target="_blank" role="button"> <i class="fab fa-whatsapp"></i> WhatsApp </a>
