--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a class="btn btn-dark col-12 py-3" href="https://www.youtube.com/channel/UCsywiAknKzdXlAZCjWgY2Dg/videos" target="_blank" role="button"> <i class="fab fa-youtube"></i> Youtube </a>
       </div> -->
       <div class="row mb-4">
-        <a class="btn btn-dark col-12 py-3" href="https://drive.google.com/file/d/180grwRHdZ-JyQMFM9wzUaHyq0syNRw6-/view?usp=sharing" target="_blank" role="button"> <i class="far fa-file"></i> Resume </a>
+        <a class="btn btn-dark col-12 py-3" href="https://docs.google.com/document/d/1661P-oJn-qWEDCUXaDmJ4Ht6RxY8cLqq/edit?usp=sharing&ouid=117165489449357692701&rtpof=true&sd=true" target="_blank" role="button"> <i class="far fa-file"></i> Resume </a>
       </div>
       <div class="row mb-4">
         <a class="btn btn-dark col-12 py-3" href="https://wa.me/6285155223165" target="_blank" role="button"> <i class="fab fa-whatsapp"></i> WhatsApp </a>
